💄 Style: change link color & fix project picture overflow.

--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -4,7 +4,7 @@
   margin-top: 0;
   a {
     font-size: var(--font-size-xxl);
-    color: white;
+    color: var(--foreground);
     text-decoration: none;
     .link__arrow {
       margin-left: var(--space-xs);
